:pencil: fixes